# httpie

./: Cargo.toml  README.md  README_zh.md
src/: main.rs
